--- a/BancoSangue/BancoSangue.csproj
+++ b/BancoSangue/BancoSangue.csproj
@@ -190,13 +190,22 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ControllersDoacao\DoacoesController.cs" />
+    <Compile Include="Controllers\ControllersDoacao\ImagensController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709181710468_Alteracao das classes.cs" />
+    <Compile Include="Migrations\201709181710468_Alteracao das classes.Designer.cs">
+      <DependentUpon>201709181710468_Alteracao das classes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Doacao.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Imagem.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -256,6 +265,21 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Doacoes\Create.cshtml" />
+    <Content Include="Views\Doacoes\Delete.cshtml" />
+    <Content Include="Views\Doacoes\Details.cshtml" />
+    <Content Include="Views\Doacoes\Edit.cshtml" />
+    <Content Include="Views\Doacoes\Index.cshtml" />
+    <Content Include="Views\Imagems\Create.cshtml" />
+    <Content Include="Views\Imagems\Delete.cshtml" />
+    <Content Include="Views\Imagems\Details.cshtml" />
+    <Content Include="Views\Imagems\Edit.cshtml" />
+    <Content Include="Views\Imagems\Index.cshtml" />
+    <Content Include="Views\Imagens\Create.cshtml" />
+    <Content Include="Views\Imagens\Delete.cshtml" />
+    <Content Include="Views\Imagens\Details.cshtml" />
+    <Content Include="Views\Imagens\Edit.cshtml" />
+    <Content Include="Views\Imagens\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -272,6 +296,11 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201709181710468_Alteracao das classes.resx">
+      <DependentUpon>201709181710468_Alteracao das classes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
